// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HomeRow Stateful 1`] = `
<div
  id="homeRow"
>
  <button
    className="homeRowButton selected"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={36}
      style={
        Object {
          "marginBottom": -6,
          "marginLeft": -6,
          "marginRight": -6,
          "marginTop": -6,
        }
      }
      viewBox="0 0 24 24"
      width={36}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Icon Specific Icon 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "var(--black)",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    style={
      Object {
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderWidth": 1,
        "lineHeight": 0,
      }
    }
  >
    <svg
      className="icon"
      fill="var(--white)"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        fill="var(--white)"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots MainPanelWithShrinkingSide Stateful Example 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <div
    className="mainPanelWithShrinkingSide"
    data-testid="main-panel-with-shrinking-side"
    style={
      Object {
        "height": 288,
      }
    }
  >
    <div
      className="shrinkingSidePanel"
      data-testid="shrinking-side-panel"
    >
      <div
        className="shrinkingPanelButton activeStyle"
        data-testid="shrinking-panel-button"
        onKeyPress={[Function]}
      >
        <div
          className="hoverColor"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "normal",
              }
            }
          >
            Sound Color Project
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </div>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyPress={[Function]}
      >
        <div
          className="hoverColor"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Color Patterns
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </div>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyPress={[Function]}
      >
        <div
          className="hoverColor"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Connections
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </div>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyPress={[Function]}
      >
        <div
          className="hoverColor"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Options
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </div>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyPress={[Function]}
      >
        <div
          className="hoverColor"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Sound Details
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </div>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyPress={[Function]}
      >
        <div
          className="hoverColor"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Actions
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="panelContentWrapper"
    >
      <div
        className="panelContent swapper"
        style={
          Object {
            "width": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Panel With Default Size 1`] = `
<div
  className="panel"
>
  <div
    className="swapper"
    style={
      Object {
        "height": 0,
      }
    }
  >
    <div
      className="scrollable current"
    >
      <div>
        <div
          className="one"
          style={
            Object {
              "background": "#888",
              "color": "white",
              "height": 100,
              "padding": 10,
            }
          }
        >
          One
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Panel With Set Size 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-end",
      "display": "flex",
      "flexDirection": "row",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="panel"
    style={
      Object {
        "width": 320,
      }
    }
  >
    <div
      className="swapper"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="scrollable current"
      >
        <div>
          <div
            className="one"
            style={
              Object {
                "background": "#888",
                "color": "white",
                "height": 100,
                "padding": 10,
              }
            }
          >
            One
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PanelLayout With Content 1`] = `
<div
  className="panelLayout"
>
  <div
    className="layoutColumn"
  >
    <div
      className="gt-mobile grow center"
    />
    <div
      style={
        Object {
          "color": "#444",
          "padding": 10,
        }
      }
    >
      Foo
    </div>
    <div
      className="layoutSpacer"
    >
      <div
        className="lt-mobile grow center"
      />
    </div>
    <div
      className="panelWrapper"
    >
      <div
        className="layoutFooter"
      >
        <div />
      </div>
      <div
        className="afterSpacer"
      >
        <div
          style={
            Object {
              "background": "#888",
              "color": "white",
              "padding": 10,
            }
          }
        >
          Bar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShrinkingPanelButton Custom Text 1`] = `
<div
  className="shrinkingPanelButton"
  data-testid="shrinking-panel-button"
  onKeyPress={[Function]}
>
  <div
    className="hoverColor"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    <svg
      className="icon buttonIcon"
      height={24}
      style={
        Object {
          "marginBottom": -4,
          "marginLeft": -4,
          "marginRight": 6,
          "marginTop": -4,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
    <div
      className="text"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Options
    </div>
    <svg
      className="icon buttonIcon"
      height={30}
      style={
        Object {
          "marginBottom": -5,
          "marginLeft": -5,
          "marginRight": -5,
          "marginTop": -5,
        }
      }
      viewBox="0 0 24 24"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </div>
</div>
`;

exports[`Storyshots ShrinkingPanelButton Example 1`] = `
<div
  className="shrinkingPanelButton"
  data-testid="shrinking-panel-button"
  onKeyPress={[Function]}
>
  <div
    className="hoverColor"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    <svg
      className="icon buttonIcon"
      height={24}
      style={
        Object {
          "marginBottom": -4,
          "marginLeft": -4,
          "marginRight": 6,
          "marginTop": -4,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
    <div
      className="text"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Color Patterns
    </div>
    <svg
      className="icon buttonIcon"
      height={30}
      style={
        Object {
          "marginBottom": -5,
          "marginLeft": -5,
          "marginRight": -5,
          "marginTop": -5,
        }
      }
      viewBox="0 0 24 24"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </div>
</div>
`;

exports[`Storyshots ShrinkingPanelButton Long Text 1`] = `
<div
  className="shrinkingPanelButton"
  data-testid="shrinking-panel-button"
  onKeyPress={[Function]}
>
  <div
    className="hoverColor"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    <svg
      className="icon buttonIcon"
      height={24}
      style={
        Object {
          "marginBottom": -4,
          "marginLeft": -4,
          "marginRight": 6,
          "marginTop": -4,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
    <div
      className="text"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
    </div>
    <svg
      className="icon buttonIcon"
      height={30}
      style={
        Object {
          "marginBottom": -5,
          "marginLeft": -5,
          "marginRight": -5,
          "marginTop": -5,
        }
      }
      viewBox="0 0 24 24"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </div>
</div>
`;

exports[`Storyshots ShrinkingSidePanel Example 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <div
    className="shrinkingSidePanel"
    data-testid="shrinking-side-panel"
  >
    ShrinkingSidePanel Component Content
  </div>
</div>
`;

exports[`Storyshots ShrinkingSidePanel With Shinking Buttons 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <div
    className="shrinkingSidePanel"
    data-testid="shrinking-side-panel"
  >
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyPress={[Function]}
    >
      <div
        className="hoverColor"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Color Patterns
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </div>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyPress={[Function]}
    >
      <div
        className="hoverColor"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Connections
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </div>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyPress={[Function]}
    >
      <div
        className="hoverColor"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Options
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </div>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyPress={[Function]}
    >
      <div
        className="hoverColor"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Sound Details
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </div>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyPress={[Function]}
    >
      <div
        className="hoverColor"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex={0}
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Actions
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
